--- a/backend/foodgram_backend/Dockerfile
+++ b/backend/foodgram_backend/Dockerfile
@@ -4,10 +4,10 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install --requirement requirements.txt
-
-COPY ./ /app
+RUN pip3 install --upgrade pip
 
 RUN pip3 install -r requirements.txt --no-cache-dir
 
-CMD ["python", "manage.py", "runserver", "0:8000"]
+COPY . .
+
+CMD ["gunicorn", "foodgram_backend.wsgi:application", "--bind", "0:8000"]
