--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   db:
     image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      #- /var/lib/postgresql/data/
+    - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
 
@@ -11,6 +12,8 @@ services:
     build:
       context: ../backend/foodgram_backend
       dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
     restart: always
     volumes:
       - static_value:/app/static/
@@ -32,9 +35,16 @@ services:
     ports:
       - "80:80"
     volumes:
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+
+    restart: always
+    depends_on:
+      - web
+      - frontend
 volumes:
   postgres_data:
   static_value:
