--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,29 @@
+
 server {
     listen 80;
+    server_name localhost, 192.168.1.65;
+    #server_name 127.0.0.1, localhost;
+    location /static/admin/ {
+        root /var/html/;
+    }
+
+    location /media/ {
+        root /var/html/;
+    }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000/api/;
+#         proxy_pass http://127.0.0.1:8000;
+    }
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+#         proxy_pass http://127.0.0.1:8000/admin/;
+    }
+
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
@@ -17,5 +41,6 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
 
 }
