Deploy and readme

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,7 @@
 
 server {
     listen 80;
-    server_name localhost, 192.168.1.65;
-    #server_name 127.0.0.1, localhost;
+    server_name 84.201.153.159;
     location /static/admin/ {
         root /var/html/;
     }
@@ -16,11 +15,9 @@ server {
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://web:8000/api/;
-#         proxy_pass http://127.0.0.1:8000;
     }
     location /admin/ {
         proxy_pass http://web:8000/admin/;
-#         proxy_pass http://127.0.0.1:8000/admin/;
     }
 
 
